--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorBgConverter">#262D38</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGray">#707070</color>
+    <color name="colorBlack">#000000</color>
 </resources>
