Change language on page settings

--- a/app/src/main/res/layout/activity_converter.xml
+++ b/app/src/main/res/layout/activity_converter.xml
@@ -166,6 +166,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:padding="8dp"
+            android:background="@color/colorBg2"
+            android:text="0,00"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.2"
@@ -178,7 +180,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:padding="8dp"
-            android:text="0"
+            android:text="0,00"
+            android:background="@color/colorBg2"
             app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.2"
